Added Css for the image hyperlink so that it looks like it is aligned with the text and the hover css covers the whole image.

--- a/colorclockstyle.css
+++ b/colorclockstyle.css
@@ -146,3 +146,11 @@ a:active {
     float: right;
     padding-bottom: 2px;
 }
+
+#port a 
+{
+    display: inline-block;
+	height: 20px;
+	position: relative;
+	top: 3px;
+}
